# unversity_management_system

./: CMakeLists.txt  Dodumentation.txt  README.md  add_stud_box.cpp  add_stud_box.h  add_stud_box.ui  dash_board_box.cpp  dash_board_box.h  dash_board_box.ui  display_studs_box.cpp  display_studs_box.h  display_studs_box.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  register_box.cpp  register_box.h  register_box.ui  remove_stu_box.cpp  remove_stu_box.h  remove_stu_box.ui  search_stu_box.cpp  search_stu_box.h  search_stu_box.ui  update_f_names_box.cpp  update_f_names_box.h  update_f_names_box.ui  update_l_name_box.cpp  update_l_name_box.h  update_l_name_box.ui  update_qual_box.cpp  update_qual_box.h  update_qual_box.ui  update_stu_box.cpp  update_stu_box.h  update_stu_box.ui
